Update npm and fix Carousel scroll by overflow-y

--- a/assets/css/post-layout.css
+++ b/assets/css/post-layout.css
@@ -235,6 +235,10 @@
     text-align: center;
   }
 }
+.carousel-wrapper .slider-container {
+  overflow: hidden;
+}
+
 .preset-column {
   height: 100%;
 }
