--- a/assets/scss/layouts/_carousel.scss
+++ b/assets/scss/layouts/_carousel.scss
@@ -1,2 +1,6 @@
-.splide__arrows {
+.carousel-wrapper {
+    .slider-container {
+        // Force disable scroll by height
+        overflow: hidden;
+    }
 }
